# budget-notify

./: .pre-commit-config.yaml  README.md  cli.py  database.py  db.sql  migration.sql  pyproject.toml  requirements.txt  sample.env  utils.py
.github/workflows/: test.yml
tests/: test_cli.py
